@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?org-vrjuggler-jccl-settings definition.version="3.1"?>
-<definition xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.vrjuggler.org/jccl/xsd/3.1/definition" name="pinch_glove" icon_path="jar:file:${VJ_BASE_DIR}/lib/vrjuggler/customeditors/PinchGloveEditor.jar!/org/vrjuggler/vrjconfig/customeditors/pinchglove/images/PinchGloveIcon.png" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.1/definition http://www.vrjuggler.org/jccl/xsd/3.1/definition.xsd">
+<definition xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.vrjuggler.org/jccl/xsd/3.1/definition" name="pinch_glove" icon_path="jar:file:${VJ_BASE_DIR}/share/vrjuggler/beans/customeditors/PinchGloveEditor.jar!/org/vrjuggler/vrjconfig/customeditors/pinchglove/images/PinchGloveIcon.png" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.1/definition http://www.vrjuggler.org/jccl/xsd/3.1/definition.xsd">
    <definition_version version="1" label="Pinch Glove">
       <help>Configuration for the PinchGlove</help>
       <parent>glove_device</parent>
