@@ -2,13 +2,13 @@
 <beanlist xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="http://www.vrjuggler.org/tweek/xsd/1.1/beanlist.xsd">
    <service name="DisplayWindowEditor">
-      <file name="${VJ_BASE_DIR}/lib/vrjuggler/customeditors/DisplayWindowEditor.jar"
+      <file name="${VJ_BASE_DIR}/share/vrjuggler/beans/customeditors/DisplayWindowEditor.jar"
             class="org.vrjuggler.vrjconfig.customeditors.display_window.DisplayWindowEditorPanel"/>
       <dependencies>
          <bean>ConfigBroker</bean>
          <jar path="${JCCL_BASE_DIR}/share/jccl/beans">jccl_editors.jar</jar>
          <jar path="${JCCL_BASE_DIR}/share/jccl/java">TableLayout.jar</jar>
-         <jar path="${VJ_BASE_DIR}/lib/vrjuggler">CommonEditors.jar</jar>
+         <jar path="${VJ_BASE_DIR}/share/vrjuggler">CommonEditors.jar</jar>
       </dependencies>
    </service>
 </beanlist>
