@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-04-2004 patrickh    Relocated the Java libraries and JavaBeans used by
+                        VRJConfig to $VJ_BASE_DIR/share/vrjuggler/java and
+                        $VJ_BASE_DIR/share/vrjuggler/beans respectively.
+                        NEW VERSION: 1.1.161
 Oct-29-2004 patrickh    Updated to require JCCL 0.20.
 Oct-29-2004 patrickh    Updated to require Tweek 0.18.
 Oct-18-2004 allenb      Refactored how GL and Performer windows allow event
